Fixed ritght gap in hot-to section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@ a {
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  padding: 48px 0 48px 20px;
+  padding: 48px 20px;
   gap: 26px;
   background-color: white;
 }
